; ModuleID = '/home/carl/AnghaBench/freebsd/sbin/ifconfig/extr_ifieee80211.c_set80211txpower.c'
source_filename = "/home/carl/AnghaBench/freebsd/sbin/ifconfig/extr_ifieee80211.c_set80211txpower.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.afswtch = type { i32 }

@.str = private unnamed_addr constant [40 x i8] c"invalid tx power (must be .5 dBm units)\00", align 1
@IEEE80211_IOC_TXPOWER = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i8*, i32, i32, %struct.afswtch*)* @set80211txpower to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @set80211txpower(i8* %0, i32 %1, i32 %2, %struct.afswtch* %3) #0 {
  %5 = alloca i8*, align 8
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  %8 = alloca %struct.afswtch*, align 8
  %9 = alloca double, align 8
  %10 = alloca i32, align 4
  store i8* %0, i8** %5, align 8
  store i32 %1, i32* %6, align 4
  store i32 %2, i32* %7, align 4
  store %struct.afswtch* %3, %struct.afswtch** %8, align 8
  %11 = load i8*, i8** %5, align 8
  %12 = call double @atof(i8* %11)
  store double %12, double* %9, align 8
  %13 = load double, double* %9, align 8
  %14 = fmul double 2.000000e+00, %13
  %15 = fptosi double %14 to i32
  store i32 %15, i32* %10, align 4
  %16 = load i32, i32* %10, align 4
  %17 = sitofp i32 %16 to double
  %18 = load double, double* %9, align 8
  %19 = fmul double 2.000000e+00, %18
  %20 = fcmp une double %17, %19
  br i1 %20, label %21, label %23

21:                                               ; preds = %4
  %22 = call i32 @errx(i32 -1, i8* getelementptr inbounds ([40 x i8], [40 x i8]* @.str, i64 0, i64 0))
  br label %23

23:                                               ; preds = %21, %4
  %24 = load i32, i32* %7, align 4
  %25 = load i32, i32* @IEEE80211_IOC_TXPOWER, align 4
  %26 = load i32, i32* %10, align 4
  %27 = call i32 @set80211(i32 %24, i32 %25, i32 %26, i32 0, i32* null)
  ret void
}

declare dso_local double @atof(i8*) #1

declare dso_local i32 @errx(i32, i8*) #1

declare dso_local i32 @set80211(i32, i32, i32, i32, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
